--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.mathieugood.vaadinjavakotlin.erp.crm.visitescommerciaux</groupId>
-    <artifactId>svisitescommerciaux</artifactId>
-    <name>svisitescommerciaux</name>
+    <artifactId>visitescommerciaux</artifactId>
+    <name>visitescommerciaux</name>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
